<resources>
    <string name="app_name">Weather Chat App</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_chat_name">Enter Chat Name</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Sign Up</string>
    <string name="action_forgot">FORGOT PASSWORD</string>
    <string name="action_create_chat">Create</string>
    <string name="display_header_title">Phish Shows Welcomes:</string>
    <string name="image_description_logo">The Phish Logo</string>
    <!--android:inputType="textPersonNickname" -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_verify">Verify</string>

    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_chat">New chat</string>
    <string name="action_new_contact">New contact</string>

    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_weather">Weather</string>
    <string name="title_contacts">Contacts</string>

    <string name="title_individual_chat">Individual Chat</string>

    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_log_out">Log Out</string>
    <string name="weather_search_button">Search with ZIP Code</string>
    <string name="prompt_type_a_message">Type a message</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_remember_me">REMEMBER ME</string>

    <string name="base_url_service">https://localhost:5000/weather</string>-
    <!--<string name="base_url_service">https://localhost:5000/</string>-->

    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>
    <string name="themes_header">Themes</string>
    <string name="about_header">About</string>
    <string name="sign_out_header">Sign out</string>

    <!-- Profile Preferences -->
    <string name="username_title">Your username</string>
    <string name="change_password_title">Change Password</string>

    <!-- Themes Preferences -->
    <string name="theme_title">Current theme</string>

    <!-- About Preferences -->
    <string name="about_devs_title">About devs</string>

    <!-- Sign out Preferences -->
    <string name="sign_out_title">Sign out</string>

</resources>