<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_green5"
    tools:context=".ui.signin.SignInFragment">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="250dp"
        android:autofillHints=""
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="300dp"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginStart="280dp"
        android:background="#00BCD4"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/color_green5"/>

    <Button
        android:id="@+id/button_to_register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="350dp"
        android:text="@string/action_register_short"
        android:textColor="@color/color_green5" />

</FrameLayout>
