<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.group4.weatherchatapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.group4.weatherchatapp.ui.chat.list.ChatListFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat_list" >
        <action
            android:id="@+id/action_navigation_chat_to_navigation_individual_chat"
            app:destination="@id/individualChatFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.group4.weatherchatapp.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/individualChatFragment"
        android:name="edu.uw.tcss450.group4.weatherchatapp.ui.chat.individual.IndividualChatFragment"
        android:label="@string/title_individual_chat"
        tools:layout="@layout/fragment_individual_chat_list" >
        <argument
            android:name="chat"
            app:argType="edu.uw.tcss450.group4.weatherchatapp.ui.chat.ChatPreview" />
    </fragment>
    <fragment
        android:id="@+id/navigation_connections"
        android:name="edu.uw.tcss450.group4.weatherchatapp.ui.connections.ConnectionsFragment"
        android:label="ConnectionsFragment"
        tools:layout="@layout/fragment_connections_list">
        <action
            android:id="@+id/action_connectionsFragment_to_statusFragment"
            app:destination="@id/navigation_status" />
    </fragment>
    <fragment
        android:id="@+id/navigation_status"
        android:name="edu.uw.tcss450.group4.weatherchatapp.ui.connections.StatusFragment"
        android:label="StatusFragment"
        tools:layout="@layout/fragment_status_list">
        <action
            android:id="@+id/action_navigation_status_to_navigation_connections"
            app:destination="@id/navigation_connections" />
    </fragment>

</navigation>